fix p align

--- a/src/layout/components/VideoHero.css
+++ b/src/layout/components/VideoHero.css
@@ -73,6 +73,8 @@
     .basic-page .video-text-holder a,
     .basic-page .video-text-holder button{
         margin-top: 8px!important;
+        margin-left: auto;
+        margin-right: auto;
     }
     .basic-page .video-text-holder p + div{
         margin-left: auto;
